@@ -1,0 +1,1 @@
+CREATE TABLE cases_files (guid VARCHAR(50), name VARCHAR(70), path VARCHAR(160), status VARCHAR(20));
